<resources>
    <string name="app_name">LaviLog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textadd">每日QA</string>
    <string name="textSearch">查詢</string>
    <string name="textUpdate">發布</string>
    <string name="textQuestion">問題庫</string>
    <string name="textarticle">請回答問題</string>
    <string name="textDirNotCreated">照片無法新增</string>
    <string name="textNoCameraAppFound">No camera app found</string>
    <string name="textInsert">確定</string>
    <string name="textSelectPicture">選擇相片</string>
    <string name="textTextView">尺寸</string>
    <string name="textTakePicture">開啟相機</string>
    <string name="textCancel">取消</string>

    <string name="textName">母湯哲</string>
    <string name="textImageUploadSuccess">照片已上傳</string>
    <string name="textInserted">文章已新增</string>
    <string name="textInsertFail">上傳失敗</string>
    <string name="textImageUploadFail">照片上傳失敗</string>


    <string name="textNoDailyFound">找不到日誌</string>
    <string name="textImageDeleted">Image is deleted</string>
    <string name="textDeleteFail">Delete failed</string>


    <!-- QRcode -->
    <string name="textResultNotFound">掃描不到結果，請再試一次</string>
    <string name="textQRView">對方僅需使用LaviLog的行動條碼掃瞄器，並對準本行動條碼，即可將您加入好友名單內。</string>

    <!-- SearchFreind, SearchUser -->
    <string name="textNo">沒有好友</string>
    <string name="textNo2">沒有帳號</string>
    <string name="textImageDownloadFail">圖片下載失敗</string>
    <string name="textDate">日期</string>
    <string name="textItemQuestion">當日問題</string>
    <string name="textItemAnswer">當日回答</string>
    <string name="btInsert">Insert</string>
    <string name="backManager">後台人員</string>
    <string name="userManager">會員管理</string>
    <string name="CommodityManage">商品管理</string>
    <string name="ReportManage">檢舉管理</string>

    <string name="textInserted2">好友已新增</string>
    <string name="textInsertFail2">新增失敗</string>
    <string name="textDeletedNotice2">通知已刪除</string>


</resources>
